# sys_switch

./: .gitignore  README.md  pyproject.toml
scripts/: linux_pkexec_setup.sh
src/: __main__.py
src/sys_switch/: __init__.py  cli.py  main.py  models.py
src/sys_switch/gui/: app.py
